# PyOGC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
PyOGC/: __init__.py  collections.py  conformace.py  landing.py
PyOGC/TilingSchemes/: schemes.py
PyOGC/processes/: processes.py
PyOGC/utils/: helpers.py  urls.py
PyOGC/vector/: features.py
tests/: test_tiling.py
