[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["Ryanwalker277 <andianurag277@gmail.com>"]
readme = "README.md"
packages = [{include = "rp_poetry"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
pytest = "^7.2.2"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
